--- a/web.config
+++ b/web.config
@@ -7,7 +7,7 @@
 
         <iisnode
             node_env="production"
-            watchedFiles="*.js;src\*.js;services\storage\*.js;services\slack\*.js;utilities\*.js"
+            watchedFiles="*.js;src\*.js;src\services\storage\*.js;src\services\slack\*.js;src\utilities\*.js"
         />
         <rewrite>
             <rules>
