--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "dotenv": "^8.2.0",
         "esm": "^3.2.25",
         "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "jest": "^25.1.0"
     }
 }
