changed error handling, request validation. before arguments changes

--- a/web.config
+++ b/web.config
@@ -7,7 +7,7 @@
 
         <iisnode
             node_env="production"
-            watchedFiles="*.js;src\*.js;src\services\storage\*.js;src\services\slack\*.js;src\utilities\*.js"
+            watchedFiles="*.js;src\*.js;src\helpers\*.js;src\services\storage\*.js;src\services\slack\*.js;src\middlewares\*.js;src\middlewares\requestValidator\*.js;src\utilities\*.js"
         />
         <rewrite>
             <rules>
@@ -32,6 +32,7 @@
             <requestFiltering>
                 <hiddenSegments>
                     <add segment="node_modules" />
+                    <add segment="__tests__" />
                 </hiddenSegments>
             </requestFiltering>
         </security>
