--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     },
     "scripts": {
         "start": "node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest"
+    },
+    "babel": {
+        "plugins": [
+            "transform-es2015-modules-commonjs"
+        ]
     },
     "author": "",
     "license": "ISC",
@@ -16,9 +21,11 @@
         "@slack/web-api": "^5.7.0",
         "dotenv": "^8.2.0",
         "esm": "^3.2.25",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "express-validator": "^6.4.0"
     },
     "devDependencies": {
-        "jest": "^25.1.0"
+        "jest": "^25.1.0",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2"
     }
 }
