--- a/web.config
+++ b/web.config
@@ -7,7 +7,7 @@
 
         <iisnode
             node_env="production"
-            watchedFiles="*.js;src\*.js;src\helpers\*.js;src\services\storage\*.js;src\services\slack\*.js;src\middlewares\*.js;src\middlewares\requestValidator\*.js;src\utilities\*.js"
+            watchedFiles="*.js;src\*.js;src\helpers\*.js;src\services\storage\*.js;src\services\slack\*.js;src\middlewares\*.js;src\middlewares\requestValidator\*.js;src\middlewares\errorHandler\*.js;src\utilities\*.js"
         />
         <rewrite>
             <rules>
