added: closed channel indicating; removing channel_topic messages; some tests

--- a/web.config
+++ b/web.config
@@ -2,12 +2,12 @@
 <configuration>
     <system.webServer>
         <handlers accessPolicy="Read, Script">
-            <add name="iisnode" path="index.js" verb="*" modules="iisnode" />
+            <add name="iisnode" path="channelBuild.js" verb="*" modules="iisnode" />
         </handlers>
 
         <iisnode
             node_env="production"
-            watchedFiles="*.js;src\*.js;src\helpers\*.js;src\handlers\*.js;src\services\storage\*.js;src\services\slack\*.js;src\middlewares\*.js;src\middlewares\requestValidator\*.js;src\utilities\*.js"
+            watchedFiles="*.js;src\*.js;src\helpers\*.js;src\handlers\*.js;src\services\storage\*.js;src\services\storage\*.json;src\services\slack\*.js;src\middlewares\*.js;src\middlewares\requestValidator\*.js;src\utilities\*.js"
         />
         <rewrite>
             <rules>
@@ -23,7 +23,7 @@
                 </rule>
                 <rule name="hooks">
                     <match url=".*" />
-                    <action type="Rewrite" url="index.js"/>
+                    <action type="Rewrite" url="channelBuild.js"/>
                 </rule>
             </rules>
         </rewrite>
